# expenses_calculator

./: .gitignore  CMakeLists.txt  CalculatorFunctions.cpp  Database.cpp  Database.h  FileEditTable.cpp  FileEditTable.h  FileEditWidget.cpp  FileEditWidget.h  Functions.cpp  Parcer.cpp  Parcer.h  README.md  Slots.cpp  Student.cpp  Student.h  StudentCalculator.cpp  StudentCalculator.h  StudentExpenses.cpp  StudentExpenses.h  StudentsDatabase.cpp  StudentsDatabase.h  UI.cpp  main.cpp
Resources/: Caffe-and-cinema.csv  Costs.csv  Institute.csv  Transport2.csv
